Changes to add jdk17, remove jdk 8,14, OS 2.0 and upgrade to gradle 7 (#156)
* Changes to add jdk17, remove jdk 8,14 and upgrade to gradle 7

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Adding module jdk.compiler to fix build issue with jdk 17

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Adding module to gradle jvmArgs to fix build issue

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Adding more modules to gradle jvmArgs to fix build issue relatd to jdk 17

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Upgrading google java format to 1.12.0 to fix jdk 17 build issue

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Upgrade spotbugs plugin version to fix jdk 17 build issue

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Fixing few spotsbug error and ignoring failures for now

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Fixing unit tests due to latest changes

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Adding OS 2.0 related changes

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Adding temp branch to test CI

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Updating OS version in docker file

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Revert temporary changes done earlier to test JDK 11,17 CI

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>