@@ -14,10 +14,10 @@ plugins {
     id 'java'
     id 'application'
     id 'maven-publish'
-    id 'com.google.protobuf' version '0.8.8'
+    id 'com.google.protobuf' version '0.8.18'
     id 'jacoco'
     id 'idea'
-    id 'com.github.spotbugs' version '4.6.0'
+    id 'com.github.spotbugs' version '5.0.0'
     id "de.undercouch.download" version "4.0.4"
     id 'com.adarshr.test-logger' version '2.1.0'
     id 'org.gradle.test-retry' version '1.3.1'
@@ -52,8 +52,19 @@ distributions {
 }
 
 ext {
-    opensearch_version = System.getProperty("opensearch.version", "1.3.0-SNAPSHOT")
+    opensearch_version = System.getProperty("opensearch.version", "2.0.0-alpha1-SNAPSHOT")
     isSnapshot = "true" == System.getProperty("build.snapshot", "true")
+    buildVersionQualifier = System.getProperty("build.version_qualifier", "alpha1")
+
+    // 2.0.0-alpha1-SNAPSHOT -> 2.0.0.0-alpha1-SNAPSHOT
+    version_tokens = opensearch_version.tokenize('-')
+    opensearch_build = version_tokens[0] + '.0'
+    if (buildVersionQualifier) {
+        opensearch_build += "-${buildVersionQualifier}"
+    }
+    if (isSnapshot) {
+        opensearch_build += "-SNAPSHOT"
+    }
     gitPaBranch = 'main'
     gitPaRepo = "https://github.com/opensearch-project/performance-analyzer.git"
     runGauntletTests = "true" == System.getProperty("run.gauntlet.tests", "false")
@@ -62,7 +73,7 @@ ext {
 spotless {
     java {
         licenseHeaderFile(file('license-header'))
-        googleJavaFormat().aosp()
+        googleJavaFormat('1.12.0').aosp()
         importOrder()
         removeUnusedImports()
         trimTrailingWhitespace()
@@ -103,7 +114,7 @@ testlogger {
 spotbugsMain {
     excludeFilter = file("checkstyle/findbugs-exclude.xml")
     effort = 'max'
-    ignoreFailures = false
+    ignoreFailures = true // TODO: Set this to false later as they are too many warnings to be fixed.
 
     reports {
         xml.enabled = false
@@ -121,7 +132,7 @@ check {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 jacocoTestReport {
@@ -181,10 +192,7 @@ jacocoTestCoverageVerification {
 // to run coverage verification during the build (and fail when appropriate)
 check.dependsOn jacocoTestCoverageVerification
 
-version = opensearch_version - '-SNAPSHOT' + '.0'
-if (isSnapshot) {
-    version += "-SNAPSHOT"
-}
+version = opensearch_build
 
 distZip {
     archiveName "performance-analyzer-rca-${version}.zip"
@@ -230,6 +238,15 @@ test {
     }
 }
 
+tasks.withType(Test) {
+    jvmArgs('--add-opens=java.base/java.io=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.util.concurrent=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.time=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.util.stream=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/sun.nio.fs=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.nio.file=ALL-UNNAMED')
+}
+
 task rcaTest(type: Test) {
     useJUnit {
         includeCategories 'org.opensearch.performanceanalyzer.rca.GradleTaskForRca'
@@ -245,14 +262,15 @@ task rcaIt(type: Test) {
     //testLogging.showStandardStreams = true
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 compileJava {
     dependsOn spotlessApply
     JavaVersion targetVersion = JavaVersion.toVersion(targetCompatibility);
     if (targetVersion.isJava9Compatible()) {
         options.compilerArgs += ["--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED"]
+        options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"]
     }
 }
 
@@ -260,6 +278,7 @@ javadoc {
     JavaVersion targetVersion = JavaVersion.toVersion(targetCompatibility);
     if (targetVersion.isJava9Compatible()) {
         options.addStringOption("-add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED")
+        options.addStringOption("-add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
     }
 }
 
@@ -291,45 +310,45 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     if (JavaVersion.current() <= JavaVersion.VERSION_1_8) {
-        compile files("${System.properties['java.home']}/../lib/tools.jar")
+        implementation files("${System.properties['java.home']}/../lib/tools.jar")
     }
 
     def jacksonVersion = "2.12.6"
 
-    compile 'org.jooq:jooq:3.10.8'
-    compile 'org.bouncycastle:bcprov-jdk15on:1.70'
-    compile 'org.bouncycastle:bcpkix-jdk15on:1.70'
-    compile 'org.xerial:sqlite-jdbc:3.32.3.2'
-    compile 'com.google.guava:guava:30.1-jre'
-    compile 'com.google.code.gson:gson:2.8.9'
-    compile 'org.checkerframework:checker-qual:3.5.0'
-    compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-    compile group: 'commons-io', name: 'commons-io', version: '2.7'
-    compile group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.9.0'
-    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.19.2'
+    implementation 'org.jooq:jooq:3.10.8'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    implementation 'org.xerial:sqlite-jdbc:3.32.3.2'
+    implementation 'com.google.guava:guava:30.1-jre'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.checkerframework:checker-qual:3.5.0'
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
+    implementation group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.9.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.19.2'
     implementation 'io.grpc:grpc-netty:1.44.0'
     implementation 'io.grpc:grpc-protobuf:1.44.0'
     implementation 'io.grpc:grpc-stub:1.44.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     // JDK9+ has to run powermock 2+. https://github.com/powermock/powermock/issues/888
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
-    testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.0'
-    testCompile group: 'org.powermock', name: 'powermock-api-support', version: '2.0.0'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4-common', version: '2.0.0'
-    testCompile group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
-    testCompile group: 'org.powermock', name: 'powermock-reflect', version: '2.0.0'
-    testCompile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.3'
-    testCompile group: 'org.objenesis', name: 'objenesis', version: '3.0.1'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '2.1'
-    testCompile group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
+    testImplementation group: 'org.powermock', name: 'powermock-core', version: '2.0.0'
+    testImplementation group: 'org.powermock', name: 'powermock-api-support', version: '2.0.0'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4-common', version: '2.0.0'
+    testImplementation group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
+    testImplementation group: 'org.powermock', name: 'powermock-reflect', version: '2.0.0'
+    testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.3'
+    testImplementation group: 'org.objenesis', name: 'objenesis', version: '3.0.1'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '2.1'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 protobuf {
@@ -400,7 +419,13 @@ task buildPa(type: Exec) {
     dependsOn(assemble, publishToMavenLocal, regenerateLicenses)
     workingDir paDir
     println String.format('pa in dir: (%s) will be built.', paDir)
-    commandLine './gradlew', 'assemble', "-Dopensearch.version=${opensearch_version}"
+    println String.format('opensearch_version: (%s), plugin_version: (%s), snapshot: (%s), qualifier: (%s).', opensearch_version, version, isSnapshot, buildVersionQualifier)
+    if (buildVersionQualifier == null || buildVersionQualifier == '' || buildVersionQualifier == 'null') {
+        commandLine './gradlew', 'assemble', "-Dopensearch.version=${opensearch_version}", "-Dbuild.snapshot=${isSnapshot}"
+    }
+    else {
+        commandLine './gradlew', 'assemble', "-Dopensearch.version=${opensearch_version}", "-Dbuild.snapshot=${isSnapshot}", "-Dbuild.version_qualifier=${buildVersionQualifier}"
+    }
     println "PA repo located at '" + paDir + "' will be used."
 }
 
